src/app/core/menu/menu-item/menu-item.scss
.menu-item {
  width: 180px;
  transition: width 0.5s;

  &:hover {
    .pi, .menu-item-label {
      color: var(--p-primary-contrast-color);
    }
  }
}

.reduced {
  width: 32.4px;
}

.menu-item-icon {
  position: absolute;
  left: 0;
  bottom: 0;
  top: calc(50% - 15px);
  padding-left: 8px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 32px;
  transition: width 0.5s, padding-left 0.5s;

  .pi {
    color: var(--p-primary-950);
  }
}

.menu-item-label {
  position: absolute;
  text-wrap: nowrap;
  top: calc(50% - 8px);
  left: 32px;
  transition: opacity 0.5s;
  color: var(--p-primary-950);
  font-weight: bold;
}

:host-context(.mobileversion) {
  .reduced {
    width: var(--btn-height-mobile);
  }
}

::ng-deep {
  .menu-item {
    .button-menu {
      height: 32px;
      transition: padding-left 0.5s;
    }
  }

  .menu-item.active {
    .button-menu {
      background: var(--p-primary-50);
      border-color: var(--p-primary-50);
    }

    .pi, .menu-item-label{
      color: var(--p-primary-900) !important;
    }

  }

  .menu-item.reduced {
    .button-menu {
      display: flex;
      align-items: center;
      justify-content: center;
      padding-left: 8px;
    }

    .menu-item-icon {
      padding-left: 0;
    }
  }
}

